# SilenceDetectorAlarm

./: .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  SilenceDetector.old.py  SilenceDetector.py  install.sh  requirements.txt  setup.py
.github/workflows/: main.yml
BFM_Silence_Detector/: __init__.py  __main__.py  config.py  dashboard.py  gpio.py  main.py  notification.py
lib/: CMakeLists.txt
port/mbedtls/inc/: ssl_config.h
src/: BFM_GPIO_Interface.c  CMakeLists.txt
